--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "AGPL-3.0-or-later",
   "devDependencies": {
     "buffer": "^6.0.3",
+    "os-browserify": "^0.3.0",
     "process": "^0.11.10",
     "sass": "^1.49.9",
     "telegram": "^2.5.20",
